@@ -1,6 +1,7 @@
 The following is a new package build script for Solaris.   This is being
 introduced into OpenSSH 3.0 and above in hopes of simplifying the build
-process.  
+process.  As of 3.1p2 the script should work on all platforms that have
+SVR4 style package tools.
 
 The build process is called a 'dummy install'.. Which means the software does
 a  "make install-nokeys DESTDIR=[fakeroot]".  This way all manpages should
@@ -11,7 +12,8 @@ Directions:
 
 1. make -F Makefile.in distprep  (Only if you are getting from the CVS tree)
 2. ./configure --with-pam [..any other options you want..]
-3. cd contrib/solaris; ./buildpkg.sh
+3. look at the top of contrib/solaris/buildpkg.sh for the configurable options.
+4. ./contrib/solaris/buildpkg.sh
 
 If all goes well you should have a solaris package ready to be installed.
 
@@ -20,9 +22,3 @@ openssh-unix-dev@mindrot.org and I will try to assist you as best as I can.
 
 - Ben Lindstrom
 
-TODO:
-- Expand to cover all sysvr4 family of OSes
-- Clean things up a bit more.  
-- Detect if sshd is running and refuse to start.
-- SHOULD check for existing sshd_config nor ssh_config (does not currently).
-  [Post install script?  Ugh.. Nasty]
